# wasm-injector

./: .gitignore  Cargo.toml  LICENSE  README.md  TAGS.txt  dependencies.txt  deploy.sh
.github/workflows/: cumulus-stack-overflow.yaml  main.yaml  release-mac-apple.yaml  release-mac-intel.yaml  release-ubuntu.yaml  rust.yaml
scripts/: hexify.js  hexify.sh  mount.sh  runTests.jl
src/: injector.rs  lib.rs  main.rs  maybe_compressed_blob.rs  stack_limiter.rs  util.rs
src/injecting/: injections.rs  injector.rs  mod.rs
test-wasm/: test.wasm
tests/: 0001-parachains-pvf-compilation-time-bad.toml  0001-parachains-pvf-compilation-time-bad.zndsl  0001-parachains-pvf-compilation-time-good.toml  0001-parachains-pvf-compilation-time-good.zndsl  0002-parachains-pvf-execution-time-bad.toml  0002-parachains-pvf-execution-time-bad.zndsl  0002-parachains-pvf-execution-time-good.toml  0002-parachains-pvf-execution-time-good.zndsl  0003-parachains-pvf-memory-allocation-bad.toml  0003-parachains-pvf-memory-allocation-bad.zndsl  0003-parachains-pvf-memory-allocation-good.zndsl  0004-parachains-pvf-stack-allocation-bad.toml  0004-parachains-pvf-stack-allocation-bad.zndsl  0004-parachains-pvf-stack-allocation-good.toml  0004-parachains-pvf-stack-allocation-good.zndsl  parachains-pvf.toml
tests/kagome/: 0001-parachains-pvf-compilation-time-bad.toml  0001-parachains-pvf-compilation-time-bad.zndsl  0002-parachains-pvf-execution-time-bad.toml  0002-parachains-pvf-execution-time-bad.zndsl  0003-parachains-pvf-memory-allocation-bad.toml  0003-parachains-pvf-memory-allocation-bad.zndsl  (+2 more)
(+10 files in other folders)
