[package]
name = "wasm_stack_injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-instrument = "0.4.0"
wat = "1.0.63"
parity-wasm = "0.45.0"

zstd = "0.12.3+zstd.1.5.2"
thiserror = "1.0.40"

[lib]
name = "wasm_stack_injector"
path = "src/lib.rs"

[[bin]]
name = "wasm_stack_injector"
path = "src/main.rs"
