[package]
name = "wasm_injector"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-maybe-compressed-blob = "5.0.0"
thiserror = "1.0.40"
wasm-instrument = "0.4.0"
wat = "1.0.63"
zstd = "0.12.3+zstd.1.5.2"

[lib]
name = "wasm_injector"
path = "src/lib.rs"

[[bin]]
name = "wasm_injector"
path = "src/main.rs"
